--- a/assets/stylesheets/rr.css
+++ b/assets/stylesheets/rr.css
@@ -52,10 +52,6 @@ h2 {
   border: 2px solid;
 }
 
-.the-big-sell {
-  line-height: 1.7rem;
-}
-
 em {
   font-weight: 200;
 }
@@ -65,6 +61,31 @@ em {
   padding: 2vw;
   background-color: #ededed;
   border: 2px solid;
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  font-size: 1.5rem;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0 0 0 1rem;
+  padding: 0;
+}
+
+li.active {
+  list-style-image: url("../../assets/images/bullet.png");
+}
+
+ul.boring {
+  list-style-type: none;
+  margin: 0 0 1.2rem 0;
+  padding: 0;
+}
+
+ul.boring li {
+  font-weight: 200;
+  padding-bottom: 0.2rem;
 }
 
 a {
