--- a/assets/stylesheets/rr.css
+++ b/assets/stylesheets/rr.css
@@ -16,6 +16,7 @@ body.home {
   -o-background-size: cover;
   background-position: center center;
   margin: 0;
+  min-height: 800px;
 }
 
 body.how {
@@ -37,7 +38,7 @@ h1 {
 }
 
 .details-container {
-  position: absolute;
+  position: fixed;
   bottom: 0;
   width: 100%;
 }
