--- a/assets/stylesheets/rr.css
+++ b/assets/stylesheets/rr.css
@@ -108,6 +108,13 @@ li.active {
   margin-left: auto;
 }
 
+img.logo {
+  float: left;
+  width: 6vw;
+  opacity: 0.2;
+  margin: 0 0 0 2vw;
+}
+
 .what {
   margin: 0 0 2vw 2vw;
   padding: 1.4vw 2vw;
