--- a/assets/stylesheets/rr.css
+++ b/assets/stylesheets/rr.css
@@ -195,9 +195,41 @@ img.logo {
 }
 
 .words {
-  margin: 1rem 0;
+  width: 100%;
+  display: block;
+  padding: 20px 0 25px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  text-align: center;
+}
+
+.words.light {
+  color: #000;
+}
+
+.words.medium {
+  color: rgb(255, 0, 0);
+}
+
+.words.dark {
+  color: #FFF;
 }
 
 .quote {
   font-style: italic;
+}
+
+.background {
+  border-top: 1px solid #000;
+  background: #FFF;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  filter: alpha(opacity=30);
+  -moz-opacity: 0.30;
+  -khtml-opacity: 0.30;
+  opacity: 0.30;
 }
